Add stream for attach, and add attach websocket
